--- a/package.json
+++ b/package.json
@@ -8,15 +8,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
+    "@svgr/webpack": "^6.2.0",
+    "antd": "^4.18.5",
+    "axios": "^0.25.0",
+    "babel-preset-next": "^1.4.0",
+    "moment": "^2.29.1",
     "next": "12.0.9",
+    "next-seo": "^5.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "typescript-plugin-styled-components": "^2.0.0"
   }
 }
